--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,15 +2,14 @@
   url: /
   external: false
 
+- title: members
+  url: /members/
+  external: false
+
 - title: archive
   url: /archive/
   external: false
 
 - title: about
   url: /about/
-  external: false # set true if you using external link, see below
-
-# Example:
-# - title: github
-#   url: https://github.com/piharpi/jekyll-klise
-#   external: true
+  external: false
