--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Site settings
 title: M4ntic0re # site title
-description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+description: The official website of M4ntic0re CTF Team # site description
 lang: en-US # default lang
 timezone: International # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
+repo: https://github.com/M4ntic0re-Team # site repository
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
